prevent horizontal scroll from showing on narrower displays

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
 }
 
 footer {
-  width: 99%;
+  width: 98%;
   position: absolute;
   bottom: 0;
 }
